-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.5.0, Lustre 2.6.0
-
3
-
11971
This problem is related to LU-4012.
Kernel version 2.6.36 does not contain in net/sunrpc/cache.c the functions
cache_register_net/cache_unregister_net which are integrated in
LU-4012 for newer kernels (>= 3.4).
To provide compatibility for kernel versions 2.6.36 (used in 2.5 and 2.6) one needs
a compatibility macro.
I will provide a patch to fix thos.