LU-4372 gss: Compatibility cache_register_net for 2.6.36

Kernel version 2.6.36 does not contain in net/sunrpc/cache.c
the functions cache_register_net/cache_unregister_net which
are integrated in LU-4012 to support newer kernels (>= 3.4).
This patch provides a compatibility macro to support 2.6.36.

Signed-off-by: Thomas Stibor <thomas@stibor.net>
Change-Id: Iaee5aa7e60e1bd08735c345f413a2344c2850f57